# GameMath

./: CMakeLists.txt  README.md
include/: AABB2.h  MathUtilities.h  Ray2.h  Sphere2.h  Vector2.h
src/: AABB2.cpp  MathUtilities.cpp  Ray2.cpp  Sphere2.cpp  Vector2.cpp
src/test/: Test.cpp
